[tool.poetry]
name = "boltz_client"
version = "0.0.8"
description = "python boltz client"
license = "MIT"
authors = ["dni <office@dnilabs.com>"]
readme = "README.md"
repository = "https://github.com/dni/boltz-client-python"
homepage = "https://boltz.exchange"

[tool.poetry.dependencies]
python = "^3.10 | ^3.9 | ^3.8 | ^3.7"
httpx = ">=0.23"
embit = ">=0.4"
click = ">=8"
websockets = ">=10"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.20.3"
isort = "^5.10.1"
pytest = "^7.1.2"
black = "^22.6.0"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
boltz = "boltz_client.cli:main"

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = "True"
files = "boltz_client"

[tool.pytest.ini_options]
log_cli = true
log_level = "INFO"
testpaths = [
  "tests"
]
