[tool.poetry]
name = "boltz_client"
version = "0.2.0"
description = "python boltz client"
license = "MIT"
authors = ["dni <office@dnilabs.com>"]
readme = "README.md"
repository = "https://github.com/dni/boltz-client-python"
homepage = "https://boltz.exchange"
packages = [
  {include = "boltz_client"},
  {include = "boltz_client/py.typed"},
]

[tool.poetry.dependencies]
python = "^3.10 | ^3.9"
httpx = ">=0.23"
embit = "^0.7.0"
click = ">=8"
websockets = ">=10"
wallycore = "1.0.0"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.20.3"
isort = "^5.10.1"
pytest = "^7.1.2"
black = "^22.6.0"
mypy = "^0.971"
pylint = "^2.15.10"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
boltz = "boltz_client.cli:main"

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = "True"
files = "boltz_client"

[tool.pytest.ini_options]
log_level = "INFO"
testpaths = [
  "tests"
]

[tool.pylint.format]
max-line-length = 125

[tool.pylint.'MESSAGES CONTROL']
disable = [
  "fixme",
  "import-outside-toplevel",
  "invalid-name",
  "too-many-arguments",
  "missing-function-docstring",
  "missing-class-docstring",
  "too-many-instance-attributes",
  "too-many-locals",
  "too-many-statements",
]
